--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 ansi2html==1.8.0
 asttokens==2.4.1
 attrs==23.1.0
-blinker==1.7.0
 category-encoders==2.6.3
 certifi==2023.7.22
 charset-normalizer==3.3.2
@@ -24,6 +23,7 @@ executing==2.0.1
 fastjsonschema==2.18.1
 Flask==3.0.0
 fonttools==4.44.0
+gunicorn==21.2.0
 idna==3.4
 imbalanced-learn==0.11.0
 importlib-metadata==6.8.0
